# wraptimer

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  README.md  example.py  index.html  mkdocs.yml  nodemon.json  objects.inv  pyproject.toml  sitemap.xml
docs/: index.md  timeit.md  timer.md
docs/includes/: abbreviations.md
docs/source/: conf.py  index.rst
docs/styles/: extra.css
images/: recording.cast
includes/abbreviations/: index.html
search/: search_index.json
timeit/: index.html
timer/: index.html
wraptimer/: __init__.py  timeit.py  timer.py  utils.py
