[tool.poetry]
name = "wraptimer"
version = "0.1.1"
description = "An amazing alternative to Python's builtin timeit module that allows for high resolution timing of functions as well as in-depth line-by-line timing. It also exposes convenient classes to measure execution time for any arbitrary code."
authors = ["Anthony Mugendi <ngurumugz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
termcolor = "^2.3.0"

# optional groups
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"
mkdocs-ansible = "^0.1.6"
markdown-include = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[project]
# https://peps.python.org/pep-0621/#readme
# requires-python = ">=3.9"
# dynamic = ["version"]
# name = "ansible-compat"
# description = "Ansible compatibility goodies"
# readme = "README.md"
# authors = [{ "name" = "Anthony Mugendi", "email" = "ngurumugz@gmail.com" }]
# maintainers = [{ "name" = "Anthony Mugendi", "email" = "ngurumugz@gmail.com" }]

# license
license = { text = "MIT" }

# https://gist.github.com/nazrulworld/3800c84e28dc464b2b30cec8bc1287fc
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]

# Enter some keywords
keywords = ["debug","trace","timeit","timer","process", "execution"]

# dependencies
dependencies = [
  "termcolor>=2.3.0"
]

[project.urls]
homepage = "https://mugendi.github.io/wraptimer/"
documentation = "https://mugendi.github.io/wraptimer/"
repository = "https://github.com/mugendi/wraptimer"
changelog = "https://github.com/mugendi/wraptimer/releases"

[tool.black]
line-length = 90
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
